# phi

./: .clang-tidy  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/map/double_sequence/: CMakeLists.txt  main.cpp
include/phi/: config.hpp  dyn.hpp  map.hpp  omp.hpp  seq.hpp
utest/: CMakeLists.txt  config.cpp  map.cpp
